avoid button selection on mobile

--- a/style.css
+++ b/style.css
@@ -54,9 +54,18 @@ nav span:last-of-type {
 		left: 0;
 		width: 100%;
 		height: 100vh;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
+		-webkit-box-pack: end;
+		-ms-flex-pack: end;
 		justify-content: flex-end;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 	}
 
@@ -72,6 +81,10 @@ nav span:last-of-type {
 		text-align: center;
 		border: none;
 		background-color: rgba(255, 255, 255, 0.25);
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
 	}
 
 	.controls--mobile button + button {
